Scrollbar and header/main fixes

--- a/src/components/organisms/header/styles.sass
+++ b/src/components/organisms/header/styles.sass
@@ -1,16 +1,17 @@
 @import theme
 @import globals
+@import tools/mixins
 
 
 :host
+  @include scrollbar
+  overflow-y: scroll
+
   display: flex
   flex-direction: column
-  width: 20%
+  width: 300px
   height: 100vh
-
-  overflow-y: scroll
-  scrollbar-color: $accent-color $primary-color
-  scrollbar-width: thin
+  box-sizing: border-box
 
   header
     width: 100%
