--- a/src/components/organisms/main/styles.sass
+++ b/src/components/organisms/main/styles.sass
@@ -1,1 +1,9 @@
+@import tools/mixins
+  
+
 :host
+  @include scrollbar
+  overflow-y: auto
+
+  flex-grow: 1
+  height: 100vh
